# AI-document-assistant

./: .gitignore  README.md
backend/: main.py  pyproject.toml
backend/app/: main.py
backend/app/agents/: document_agent.py
backend/app/api/: documents.py
backend/app/core/: config.py  pinecone.py
backend/app/models/: document.py
backend/app/services/: document_service.py  model_factory.py  retrieval_service.py
frontend/: package.json  pnpm-lock.yaml
frontend/app/: layout.tsx  page.tsx  providers.tsx
frontend/app/api/copilotkit/: route.ts  runtime.ts
frontend/src/components/: document-assistant.tsx  document-upload.tsx
frontend/src/lib/: api.ts
