[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ag-ui-langgraph>=0.0.42",
    "copilotkit>=0.1.94",
    "fastapi>=0.138.0",
    "langchain>=1.3.11",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.3.3",
    "langchain-pinecone>=0.2.13",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.6",
    "pinecone[asyncio]>=7.3.0",
    "pydantic-settings>=2.14.2",
    "pypdf>=6.14.2",
    "python-multipart>=0.0.32",
    "uvicorn[standard]>=0.49.0",
]
